LEARN_HUB/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnhub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: learnhub
  template:
    metadata:
      labels:
        app: learnhub
    spec:
      containers:
      - name: learnhub
        image: thamizh2026devops/learnhub:latest
        ports:
        - containerPort: 8000
