LEARN_HUB/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learnhub-service
spec:
  type: NodePort
  selector:
    app: learnhub
  ports:
    - port: 80
      targetPort: 8000
