LEARN_HUB/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learnhub-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: learnhub.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: learnhub-service
            port:
              number: 80
